# transcription-lakehouse

./: .gitignore  ARCHITECTURAL_REVIEW_REPORT.md  CONTRIBUTING.md  LOS - #002 - 2020-09-11 - Angels and Demons - Introducing Lord of Spirits.jsonl  QUICK_START.md  README.md  explore_embeddings.py  pyproject.toml  requirements.txt  sample_data.py  simple_semantic_demo.py  start-lakehouse.bat  start-lakehouse.ps1
.github/workflows/: quality-tests.yml
config/: aggregation_config.yaml  embedding_config.yaml  quality_thresholds.yaml  snapshot_config.yaml  speaker_roles.yaml  validation_rules.yaml  validator_routing.yaml
docs/: ALL_QUALITY_FIXES_COMPLETE.md  BALANCE_METRICS_FIX.md  CI_CD_INTEGRATION_COMPLETE.md  CRITICAL_FIX_SUMMARY.md  CRITICAL_ISSUES_REMEDIATION_PLAN.md  DUPLICATE_DETECTION_FIX.md  DURATION_GUARDRAILS_FIX.md  EMBEDDING_REPORTER_FIX.md  FINAL_FIXES_SUMMARY.md  FIX_PACK_PART1_SUMMARY.md  INTEGRATION_TESTS_PROPOSAL.md  ISSUES_TO_FIX.md  LENGTH_COMPLIANCE_FIX.md  SCHEMA_VALIDATION_FIX_SUMMARY.md  SPEAKER_METRICS_FIX.md  SPEAKER_VALIDATION_FIX.md  TEXT_QUALITY_FIX.md  snapshot-setup.md
examples/: explore_embeddings.py  sample_data.py
input/transcripts/: LOS - #001 - 2020-09-10 - Trailer.jsonl  LOS - #003 - 2020-09-25 - Angels and Demons II - The Divine Council.jsonl  LOS - #004 - 2020-10-08 - The Five(ish) Falls of Angels.jsonl  LOS - #005 - 2020-10-22 - Sons of God, Equal to the Angels.jsonl  (+534 more)
lakehouse/: lakehouse_metadata.json
scripts/: archive_v1_tables.py  install_pre_commit_hook.sh  run_quality_tests.py
src/lakehouse/: __init__.py  config.py  (+5 more)
tasks/: 0001-prd-transcript-data-lakehouse.md  0002-prd-beat-span-quality-assessment.md  0003-prd-provisional-lake-snapshot.md  0004-prd-fix-pack-part1-foundations.md  tasks-0001-prd-transcript-data-lakehouse.md  tasks-0002-prd-beat-span-quality-assessment.md  tasks-0003-prd-provisional-lake-snapshot.md  tasks-0004-prd-fix-pack-part1-foundations.md
tests/: README_QUALITY_TESTS.md  __init__.py  test_aggregation.py  test_embeddings.py  test_ids.py  test_ingestion.py  test_quality_assessment.py  test_quality_integration.py  test_quality_metrics.py  test_quality_schema_validation.py  test_snapshot_artifacts.py  test_snapshot_config.py  test_snapshot_creator.py  test_snapshot_manifest.py  test_snapshot_validator.py  test_speaker_roles.py  test_validation.py  test_validator_routing.py
(+69 files in other folders)
